--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@
 
 
     <script>
+        $('#traffic').oninput(function () {
+            console.log('oninput');
+            return;
+        })
       console.log('script start');
         function calculateConversionRate() {
             console.log('started fun')
