--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
         function calculateConversionRate() {
             console.log('started fun')
             var traffic = document.getElementById('traffic').value;
+            console.log('started fun 2')
             var orders = document.getElementById('orders').value;
+            console.log('started fun 3')
 
             var conversionRate = (orders / traffic) * 100;
             conversionRate = conversionRate.toFixed(2); // rounding to two decimal places
